fix(ui): correct misspelled 'transparent' in pre scrollbar styles

--- a/packages/ui/src/styles/utility/helpers.css
+++ b/packages/ui/src/styles/utility/helpers.css
@@ -13,11 +13,11 @@
 pre {
 	&::-webkit-scrollbar {
 		width: 14px;
-		background-color: transaparent;
+		background-color: transparent;
 	}
 
 	&::-webkit-scrollbar-track {
-		background-color: transaparent;
+		background-color: transparent;
 	}
 
 	&::-webkit-scrollbar-thumb {
